# ttsengine

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
.github/: CODEOWNERS
common/: TTSCommon.h  logger.cpp  logger.h
test/: CMakeLists.txt  TTSAPITest.cpp  TTSMultiClientTest.cpp  TTSTestClient.cpp
ttsclient/: CMakeLists.txt  Service.cpp  Service.h  TTSClient.cpp  TTSClient.h  TTSClientPrivateCOMRPC.cpp  TTSClientPrivateCOMRPC.h  TTSClientPrivateFirebolt.cpp  TTSClientPrivateFirebolt.h  TTSClientPrivateInterface.h  TTSClientPrivateJsonRPC.cpp  TTSClientPrivateJsonRPC.h  TextToSpeechService.cpp  TextToSpeechService.h  TextToSpeechServiceCOMRPC.cpp  TextToSpeechServiceCOMRPC.h  TextToSpeechServiceFirebolt.cpp  TextToSpeechServiceFirebolt.h
